infra/kubernetes/base/userprofileq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofileq-service
  namespace: qagi
  labels:
    app: userprofileq
spec:
  type: ClusterIP
  selector:
    app: userprofileq
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
